--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-v2.svg?v=2" />
+    <link rel="shortcut icon" href="/favicon-v2.svg?v=2" />
+    <link rel="apple-touch-icon" href="/favicon-v2.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Live Deal - 라이브로 만나는 새로운 쇼핑 경험. 실시간 방송을 통해 상품을 직접 확인하고 특별한 할인 혜택을 받아보세요." />
     <meta name="keywords" content="라이브커머스, 라이브방송, 온라인쇼핑, 실시간쇼핑, Live Deal" />
